--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "p-limit": "^6.1.0",
     "path": "^0.12.7",
     "unzipper": "^0.12.3"
   },
