--- a/artist_genre_mapping.json
+++ b/artist_genre_mapping.json
@@ -10463,5 +10463,76 @@
   ],
   "Indila": [
     "french pop"
+  ],
+  "Wild Party": [
+    "hopebeat",
+    "indie rockism"
+  ],
+  "PBdR": [
+    "Unknown Genre"
+  ],
+  "plutones": [
+    "Unknown Genre"
+  ],
+  "Movie Sounds Unlimited": [
+    "Unknown Genre"
+  ],
+  "Tonight Alive": [
+    "candy pop",
+    "pixie",
+    "pop emo",
+    "pop punk"
+  ],
+  "Rickie Wedlow": [
+    "Unknown Genre"
+  ],
+  "Arca": [
+    "latin hip hop",
+    "reggaeton",
+    "trap latino",
+    "urbano latino"
+  ],
+  "SOPHIE": [
+    "art pop",
+    "bubblegum bass",
+    "deconstructed club",
+    "escape room",
+    "hyperpop",
+    "proto-hyperpop",
+    "transpop"
+  ],
+  "Kai Whiston": [
+    "deconstructed club",
+    "proto-hyperpop"
+  ],
+  "Ryan Hemsworth": [
+    "vapor twitch"
+  ],
+  "JesseMelancholy": [
+    "Unknown Genre"
+  ],
+  "KSI": [
+    "social media pop",
+    "uk hip hop"
+  ],
+  "Briston Maroney": [
+    "nashville indie",
+    "pov: indie"
+  ],
+  "Slaydit": [
+    "Unknown Genre"
+  ],
+  "I Prevail": [
+    "alternative metal",
+    "nu-metalcore",
+    "post-grunge"
+  ],
+  "Halestorm": [
+    "alternative metal",
+    "nu metal",
+    "post-grunge"
+  ],
+  "goreyard": [
+    "Unknown Genre"
   ]
 }
