--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@observablehq/framework": "^1.11.0",
     "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
+    "marked": "^14.1.2",
     "multer": "^1.4.5-lts.1",
     "p-limit": "^6.1.0",
     "path": "^0.12.7",
-    "unzipper": "^0.12.3",
-    "concurrently": "^9.0.1"
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
